[package]
name = "dashboard-feeds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
directories = "6.0.0"
kdl = "6.3.4"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
syndication = "0.5.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.12"
